fixing formatting on smaller devices

--- a/game/static/game/css/game_style.css
+++ b/game/static/game/css/game_style.css
@@ -109,16 +109,16 @@ body {
 
 #infection_status{
     position: absolute;
-    bottom: 0%;
-    left: 0%;
-    width: 250px;
-    height: 250px;
+    bottom: -2%;
+    left: -1%;
+    width: 310px;
+    height: 255px;
     border-radius: 10px;
     border: 3px solid black;
     margin: auto;
     overflow-y: auto;
     overflow-x: auto;
-    background-color:white;
+    background-color: white;
 }
 
 #infection_status.toggled {
@@ -157,27 +157,27 @@ text-align:center;
 
 @media screen and (max-width: 1200px) and (min-width: 520px) {
     #infection_status{
-        position: absolute;
-        bottom: 0%;
-        left: 0%;
-        width: 200px;
-        height: 150px;
-        border-radius: 10px;
-        border: 3px solid black;
-        margin: auto;
-        overflow-y: auto;
-        overflow-x: auto;
-        background-color:white;
+    position: absolute;
+    bottom: -5%;
+    left: 0%;
+    width: 400px;
+    height: 160px;
+    border-radius: 10px;
+    border: 3px solid black;
+    margin: auto;
+    overflow-y: auto;
+    overflow-x: auto;
+    background-color: white;
     }
 }
 
 @media screen and (max-width: 519px) and (min-width: 200px) {
     #infection_status{
     position: absolute;
-    bottom: 0%;
+    bottom: -5%;
     left: 0%;
-    width: 100%;
-    height: 350px;
+    width: 400px;
+    height: 160px;
     border-radius: 10px;
     border: 3px solid black;
     margin: auto;
